# AltTaber

./: .gitignore  CMakeLists.txt  README.md  build_release.sh
doc/: README.en.md  README.zh-CN.md
header/: GroupSwitcherWidget.h  widget.h
header/utils/: ConfigManager.h  ConfigManagerBase.h  IconOnlyDelegate.h
src/: GroupSwitcherWidget.cpp  widget.cpp
src/utils/: IconOnlyDelegate.cpp
